Fix Apache configuration

--- a/abt.properties
+++ b/abt.properties
@@ -2,4 +2,4 @@
 
 # Directory (relative to project root) holding configuration
 abt.dir.configuration=etc
-abt.dir.profiles=${abt.dir.configuration}/profiles
+abt.dir.profiles=${abt.dir.configuration}
